// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon AlertFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M16.4661 0.5C16.7332 0.5 16.9893 0.6069 17.1771 0.796862L23.2111 6.89871C23.3962 7.08591 23.5 7.33857 23.5 7.60185V16.3935C23.5 16.6595 23.394 16.9146 23.2055 17.1023L17.0712 23.2087C16.8838 23.3953 16.6301 23.5 16.3657 23.5H7.63889C7.37177 23.5 7.11576 23.3931 6.92792 23.2032L0.789033 16.9968C0.60386 16.8095 0.5 16.5569 0.5 16.2935V7.60646C0.5 7.34045 0.605983 7.08541 0.794505 6.89774L6.92885 0.791284C7.11625 0.604732 7.36991 0.5 7.63434 0.5H16.4661ZM16.7071 7.29289C17.0976 7.68342 17.0976 8.31658 16.7071 8.70711L13.4142 12L16.7071 15.2929C17.0976 15.6834 17.0976 16.3166 16.7071 16.7071C16.3166 17.0976 15.6834 17.0976 15.2929 16.7071L12 13.4142L8.70711 16.7071C8.31658 17.0976 7.68342 17.0976 7.29289 16.7071C6.90237 16.3166 6.90237 15.6834 7.29289 15.2929L10.5858 12L7.29289 8.70711C6.90237 8.31658 6.90237 7.68342 7.29289 7.29289C7.68342 6.90237 8.31658 6.90237 8.70711 7.29289L12 10.5858L15.2929 7.29289C15.6834 6.90237 16.3166 6.90237 16.7071 7.29289Z"
      fill="currentColor"
      fill-rule="evenodd"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon AlertIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16.7525 1.79686C16.5646 1.6069 16.3086 1.5 16.0414 1.5H8.04987C7.78544 1.5 7.53178 1.60473 7.34437 1.79128L1.79451 7.31592C1.60598 7.50359 1.5 7.75863 1.5 8.02464V15.8844C1.5 16.1478 1.60386 16.4005 1.78903 16.5877L7.34344 22.2032C7.53128 22.3931 7.7873 22.5 8.05441 22.5H15.9501C16.2146 22.5 16.4682 22.3953 16.6556 22.2087L22.2055 16.6841C22.394 16.4964 22.5 16.2414 22.5 15.9754V8.02003C22.5 7.75675 22.3962 7.5041 22.2111 7.31689L16.7525 1.79686Z"
    />
    <path
      d="M8 16L16 8"
    />
    <path
      d="M16 16L8 8"
    />
  </svg>
</div>
`;

exports[`Icon ArrowDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 3L12 20"
    />
    <path
      d="M17 16L12 21L7 16"
    />
  </svg>
</div>
`;

exports[`Icon ArrowLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12L4 12"
    />
    <path
      d="M8 17L3 12L8 7"
    />
  </svg>
</div>
`;

exports[`Icon ArrowRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 12L20 12"
    />
    <path
      d="M16 7L21 12L16 17"
    />
  </svg>
</div>
`;

exports[`Icon ArrowUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 21V4"
    />
    <path
      d="M7 8L12 3L17 8"
    />
  </svg>
</div>
`;

exports[`Icon AvatarIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M4.5 19.1773C6.74319 17.9616 9.42279 17.0003 11.9999 17.0003C14.5769 17.0003 17.2567 17.9618 19.4999 19.1775M15.2053 9.95293C15.2036 10.4573 15.0723 10.9535 14.823 11.3977C14.5737 11.842 14.2141 12.2205 13.7759 12.5C13.3377 12.7794 12.8345 12.9511 12.3106 13C11.7867 13.0489 11.2584 12.9733 10.7722 12.7801C10.286 12.5869 9.85698 12.2819 9.52298 11.892C9.18899 11.5022 8.96036 11.0396 8.85721 10.545C8.75406 10.0504 8.7796 9.53905 8.93158 9.05615C9.08357 8.57326 9.35732 8.13367 9.72865 7.77621C10.1769 7.34467 10.7489 7.05056 11.372 6.93123C11.9951 6.81191 12.6412 6.87274 13.2281 7.10602C13.815 7.3393 14.3164 7.73449 14.6684 8.2414C15.0204 8.7483 15.2073 9.34403 15.2053 9.95293Z"
    />
    <circle
      cx="12"
      cy="12"
      r="10.5"
    />
  </svg>
</div>
`;

exports[`Icon ChevronDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 8L12 17L3 8"
    />
  </svg>
</div>
`;

exports[`Icon ChevronLeftIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 21L7 12L16 3"
    />
  </svg>
</div>
`;

exports[`Icon ChevronRightIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 3L17 12L8 21"
    />
  </svg>
</div>
`;

exports[`Icon ChevronUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 16L12 7L21 16"
    />
  </svg>
</div>
`;

exports[`Icon CloseIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 19L19 5"
    />
    <path
      d="M19 19L5 5"
    />
  </svg>
</div>
`;

exports[`Icon CopyIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <rect
      height="12"
      rx="1"
      width="12"
      x="9"
      y="9"
    />
    <path
      d="M5 15H4C3.44772 15 3 14.5523 3 14V4C3 3.44772 3.44772 3 4 3H14C14.5523 3 15 3.44772 15 4V5"
    />
  </svg>
</div>
`;

exports[`Icon ExternalLinkIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M9 15L21 3"
    />
    <path
      d="M15 3H21"
    />
    <path
      d="M21 9V3"
    />
    <path
      d="M7 2.99969H4.08981C3.80891 2.99457 3.53726 3.10042 3.3334 3.29442C3.12953 3.48842 3.00981 3.75503 3 4.0368V19.9345C3.00245 20.2163 3.1151 20.4858 3.31367 20.6851C3.51224 20.8844 3.78085 20.9974 4.06166 20.9999H19.9383C20.2192 20.9974 20.4878 20.8844 20.6863 20.6851C20.8849 20.4858 20.9975 20.2163 21 19.9345V16.9999"
    />
  </svg>
</div>
`;

exports[`Icon InfoFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M12 1C5.9 1 1 5.9 1 12C1 18.1 5.9 23 12 23C18.1 23 23 18.1 23 12C23 5.9 18.1 1 12 1ZM12 18C11.4477 18 11 17.5523 11 17V11C11 10.4477 11.4477 10 12 10C12.5523 10 13 10.4477 13 11V17C13 17.5523 12.5523 18 12 18ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8Z"
      fill="currentColor"
      fill-rule="evenodd"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon InfoIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="17"
      y2="11"
    />
    <path
      d="M12 7H12.01"
    />
  </svg>
</div>
`;

exports[`Icon MenuIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M3 6H21"
    />
    <path
      d="M3 12H21"
    />
    <path
      d="M3 18H21"
    />
  </svg>
</div>
`;

exports[`Icon ProgressBlockedIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10.5"
    />
    ,
    <line
      stroke-linecap="round"
      x1="7"
      x2="17"
      y1="12"
      y2="12"
    />
  </svg>
</div>
`;

exports[`Icon ProgressDoingIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6.5 13.5C7.32843 13.5 8 12.8284 8 12C8 11.1716 7.32843 10.5 6.5 10.5C5.67157 10.5 5 11.1716 5 12C5 12.8284 5.67157 13.5 6.5 13.5Z"
      fill="currentColor"
      stroke="none"
    />
    <path
      d="M12 13.5C12.8284 13.5 13.5 12.8284 13.5 12C13.5 11.1716 12.8284 10.5 12 10.5C11.1716 10.5 10.5 11.1716 10.5 12C10.5 12.8284 11.1716 13.5 12 13.5Z"
      fill="currentColor"
      stroke="none"
    />
    <path
      d="M17.5 13.5C18.3284 13.5 19 12.8284 19 12C19 11.1716 18.3284 10.5 17.5 10.5C16.6716 10.5 16 11.1716 16 12C16 12.8284 16.6716 13.5 17.5 13.5Z"
      fill="currentColor"
      stroke="none"
    />
    <circle
      cx="12"
      cy="12"
      r="10.5"
    />
  </svg>
</div>
`;

exports[`Icon ProgressTodoIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10.5"
      stroke-dasharray="4 4"
      stroke-linecap="round"
    />
  </svg>
</div>
`;

exports[`Icon SearchIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <line
      x1="15.5568"
      x2="21.9208"
      y1="15.5562"
      y2="21.9201"
    />
    <circle
      cx="9.8995"
      cy="9.89941"
      r="7"
    />
  </svg>
</div>
`;

exports[`Icon SuccessFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M12 24C18.6274 24 24 18.6274 24 12C24 5.37258 18.6274 0 12 0C5.37258 0 0 5.37258 0 12C0 18.6274 5.37258 24 12 24ZM17.7071 9.70711C18.0976 9.31658 18.0976 8.68342 17.7071 8.29289C17.3166 7.90237 16.6834 7.90237 16.2929 8.29289L10 14.5858L7.70711 12.2929C7.31658 11.9024 6.68342 11.9024 6.29289 12.2929C5.90237 12.6834 5.90237 13.3166 6.29289 13.7071L9.29289 16.7071C9.68342 17.0976 10.3166 17.0976 10.7071 16.7071L17.7071 9.70711Z"
      fill="currentColor"
      fill-rule="evenodd"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon SuccessIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10.5"
    />
    <path
      d="M7 13L10 16L17 9"
    />
  </svg>
</div>
`;

exports[`Icon ThumbsDownIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M16 1.00012H18.67C19.236 0.990108 19.7859 1.18825 20.2154 1.55694C20.645 1.92562 20.9242 2.43918 21 3.00012V10.0001C20.9242 10.5611 20.645 11.0746 20.2154 11.4433C19.7859 11.812 19.236 12.0101 18.67 12.0001H16M9.00003 14.0001V18.0001C9.00003 18.7958 9.3161 19.5588 9.87871 20.1214C10.4413 20.684 11.2044 21.0001 12 21.0001L16 12.0001V1.00012H4.72003C4.2377 0.994665 3.76965 1.16371 3.40212 1.47611C3.0346 1.78851 2.79235 2.22321 2.72003 2.70012L1.34003 11.7001C1.29652 11.9868 1.31586 12.2794 1.39669 12.5579C1.47753 12.8363 1.61793 13.0938 1.80817 13.3126C1.99842 13.5314 2.23395 13.7062 2.49846 13.8249C2.76297 13.9436 3.05012 14.0034 3.34003 14.0001H9.00003Z"
    />
  </svg>
</div>
`;

exports[`Icon ThumbsUpIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 21H3C2.46957 21 1.96086 20.7893 1.58579 20.4142C1.21071 20.0391 1 19.5304 1 19V12C1 11.4696 1.21071 10.9609 1.58579 10.5858C1.96086 10.2107 2.46957 10 3 10H6M13 8V4C13 3.20435 12.6839 2.44129 12.1213 1.87868C11.5587 1.31607 10.7956 1 10 1L6 10V21H17.28C17.7623 21.0055 18.2304 20.8364 18.5979 20.524C18.9654 20.2116 19.2077 19.7769 19.28 19.3L20.66 10.3C20.7035 10.0134 20.6842 9.72068 20.6033 9.44225C20.5225 9.16382 20.3821 8.90629 20.1919 8.68751C20.0016 8.46873 19.7661 8.29393 19.5016 8.17522C19.2371 8.0565 18.9499 7.99672 18.66 8H13Z"
    />
  </svg>
</div>
`;

exports[`Icon UploadIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 15L12 3"
    />
    <path
      d="M8 7L12.0002 3.00024"
    />
    <path
      d="M16 7L12 3"
    />
    <path
      d="M21 16V19.6682C20.9975 20.0205 20.8849 20.3575 20.6863 20.6065C20.4878 20.8556 20.2192 20.9969 19.9383 21H4.06166C3.78085 20.9969 3.51224 20.8556 3.31367 20.6065C3.1151 20.3575 3.00245 20.0205 3 19.6682V16"
    />
  </svg>
</div>
`;

exports[`Icon WarningFilledIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M0 20.8L12 0L24 20.8H0ZM12 7C12.5523 7 13 7.44772 13 8V13C13 13.5523 12.5523 14 12 14C11.4477 14 11 13.5523 11 13V8C11 7.44772 11.4477 7 12 7ZM12 18C12.5523 18 13 17.5523 13 17C13 16.4477 12.5523 16 12 16C11.4477 16 11 16.4477 11 17C11 17.5523 11.4477 18 12 18Z"
      fill="currentColor"
      fill-rule="evenodd"
      stroke="none"
    />
  </svg>
</div>
`;

exports[`Icon WarningIcon renders correctly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="css-x7nevx-Icon"
    clip-rule="evenodd"
    focusable="false"
    height="24"
    role="img"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12.8858 2.69113C12.5115 1.97647 11.4876 1.97824 11.1132 2.6929C7.60041 9.39921 5.30783 13.776 1.76707 20.5356C1.4183 21.2014 1.90105 22 2.65269 22H21.3473C22.099 22 22.5819 21.2018 22.2331 20.536L12.8858 2.69113Z"
    />
    <line
      x1="12"
      x2="12"
      y1="14"
      y2="9"
    />
    <path
      d="M12 18H12.01"
    />
  </svg>
</div>
`;
